[gd_scene load_steps=25 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character.gd" type="Script" id=3]
[ext_resource path="res://Plant.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://SandStorm.tscn" type="PackedScene" id=6]
[ext_resource path="res://SandStorm.gd" type="Script" id=7]
[ext_resource path="res://Rock.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Bungee-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://untitled.ogg" type="AudioStream" id=10]

[sub_resource type="ParticlesMaterial" id=16]
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = -2.0
initial_velocity_random = 1.0
angle = 180.0
scale = 0.5
scale_random = 1.0
color = Color( 0.329412, 0.843137, 0.996078, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 0.282353, 0.882353, 0.768627, 1 )

[sub_resource type="SphereMesh" id=17]
material = SubResource( 9 )
radius = 0.05
height = 0.1

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8.16687, 2.20476, 6.44648 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2.25583, 1.62556, 1.2677 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 3.24418, 4.90758 )

[sub_resource type="SphereShape" id=8]
radius = 7.51554

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0.0666667 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.521569, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.968627, 1, 0, 0.839216 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=10]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 0.988235, 0.870588, 0.466667, 1 )
sky_horizon_color = Color( 0.478431, 0.345098, 0.188235, 1 )
ground_bottom_color = Color( 0.403922, 0.207843, 0, 1 )
ground_horizon_color = Color( 0.478431, 0.235294, 0.0313726, 1 )

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 4 )
fog_color = Color( 0.392157, 0.117647, 0, 1 )
fog_depth_curve = 1.03527

[node name="Main" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0043416, -0.0232706, -0.0149908 )
script = ExtResource( 5 )

[node name="Character" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.282888, 0, -2.47309e-08, 0, 0.282888, 0, 2.47309e-08, 0, -0.282888, -36.8364, 16.7996, 65.8689 )
script = ExtResource( 3 )

[node name="Plant" parent="Character" instance=ExtResource( 4 )]
transform = Transform( 0.272525, 0, 5.32907e-15, 0, 0.272525, 0, -5.32907e-15, 0, 0.272525, 0.280731, 0.158287, 1.78331 )

[node name="Camera" type="Camera" parent="Character"]
transform = Transform( -3.53497, 3.93952e-07, -1.08237e-06, 0, 3.32178, 1.20903, 1.15184e-06, 1.20903, -3.32178, 0, 5.95441, -5.8515 )
current = true
far = 500.0

[node name="Particles" type="Particles" parent="Character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.370346, 0.671146, 1.7722 )
emitting = false
amount = 6
visibility_aabb = AABB( -0.947879, -1.05085, -0.776605, 1.89576, 2.1017, 1.55321 )
process_material = SubResource( 16 )
draw_pass_1 = SubResource( 17 )

[node name="Ground" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Water#1" type="Area" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80.2894, 16.3185, 57.2305 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#1"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#1"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, -0.868568, -0.295246, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Water#2" type="Area" parent="Ground"]
transform = Transform( 0.762848, 0, 1.03663e-08, 0, 1, 0, 1.03663e-08, 0, 1, 47.8786, 4.69857, 52.7538 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#2"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#2"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, 0.667988, 0.0699596, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Water#3" type="Area" parent="Ground"]
transform = Transform( 0.762848, 0, 1.03663e-08, 0, 1, 0, 1.03663e-08, 0, 1, 69.1525, 0.77348, -44.9466 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#3"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#3"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, -0.868561, 0.522978, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Water#4" type="Area" parent="Ground"]
transform = Transform( 0.411779, 0, 4.03032e-09, 0, 1, 0, 4.03032e-09, 0, 0.503981, -2.27373, 0.77348, -47.3044 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#4"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#4"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, -0.868568, 0.597891, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Water#5" type="Area" parent="Ground"]
transform = Transform( 0.886556, 0, 8.67724e-09, 0, 1, 0, 8.67724e-09, 0, 1.08507, -105.968, 0.77348, -41.9656 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#5"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#5"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, -0.868568, 0.597891, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Water#6" type="Area" parent="Ground"]
transform = Transform( 0.886556, 0, 8.67724e-09, 0, 1, 0, 8.67724e-09, 0, 1.08507, -42.0025, -34.8964, 69.4601 )
input_ray_pickable = false
gravity = -9.81
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Water#6"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Ground/Water#6"]
transform = Transform( 3.31658, 0, 3.31658, 0, 0.415699, 0, -3.31658, 0, 3.31658, -0.868568, 0.597891, -0.521645 )
mesh = ExtResource( 8 )
material = SubResource( 9 )

[node name="Cover" type="Area" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.9578, 0, -38.9806 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Cover"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.21984, 3.11031, 0.175411 )
shape = SubResource( 6 )

[node name="CSGBox17" type="CSGBox" parent="Ground/Cover"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32444, 6.77187, 0.414024 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox20" type="CSGBox" parent="Ground/Cover"]
transform = Transform( 1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, -4.37114e-08, 1, -4.37114e-08, 3.32444, 3.89937, 1.56672 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox18" type="CSGBox" parent="Ground/Cover"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 5.66732, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="CSGBox19" type="CSGBox" parent="Ground/Cover"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 0.983433, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="Cover2" type="Area" parent="Ground"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -110.564, 1.90735e-06, -33.6512 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Cover2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.21984, 3.11031, 0.175411 )
shape = SubResource( 6 )

[node name="CSGBox17" type="CSGBox" parent="Ground/Cover2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32444, 6.77187, 0.414024 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox20" type="CSGBox" parent="Ground/Cover2"]
transform = Transform( 1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, -4.37114e-08, 1, -4.37114e-08, 3.32444, 3.89937, 1.56672 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox18" type="CSGBox" parent="Ground/Cover2"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 5.66732, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="CSGBox19" type="CSGBox" parent="Ground/Cover2"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 0.983433, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="Cover3" type="Area" parent="Ground"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -21.8286, -14.0405, -2.15104 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Cover3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.21984, 3.11031, 0.175411 )
shape = SubResource( 6 )

[node name="CSGBox17" type="CSGBox" parent="Ground/Cover3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32444, 6.77187, 0.414024 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox20" type="CSGBox" parent="Ground/Cover3"]
transform = Transform( 1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, -4.37114e-08, 1, -4.37114e-08, 3.32444, 3.89937, 1.56672 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox18" type="CSGBox" parent="Ground/Cover3"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 5.66732, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="CSGBox19" type="CSGBox" parent="Ground/Cover3"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 0.983433, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="Cover4" type="Area" parent="Ground"]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 3.55271e-15, 0, 1, -80.5122, -37.225, 82.6893 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Cover4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.21984, 3.11031, 0.175411 )
shape = SubResource( 6 )

[node name="CSGBox17" type="CSGBox" parent="Ground/Cover4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32444, 6.77187, 0.414024 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox20" type="CSGBox" parent="Ground/Cover4"]
transform = Transform( 1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, -4.37114e-08, 1, -4.37114e-08, 3.32444, 3.89937, 1.56672 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 4.09928

[node name="CSGBox18" type="CSGBox" parent="Ground/Cover4"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 5.66732, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="CSGBox19" type="CSGBox" parent="Ground/Cover4"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 0.983433, 4.11575, 0.13406 )
use_collision = true
width = 5.73313
height = 0.8217
depth = 1.50878

[node name="Area" type="Area" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.9559, 0, -50.4741 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.73946 )
shape = SubResource( 7 )

[node name="Area2" type="Area" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -149.696, -36.0938, 41.1433 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Ground/Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.346741, 0, -0.363262 )
shape = SubResource( 8 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.29236
margin_right = 1.29236
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plant" type="VBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -66.0
margin_right = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plant_Health" type="ProgressBar" parent="UI/Plant"]
margin_right = 170.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )

[node name="Plant_Water" type="ProgressBar" parent="UI/Plant"]
margin_top = 20.0
margin_right = 170.0
margin_bottom = 36.0
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 12 )

[node name="Plant_Sunlight" type="ProgressBar" parent="UI/Plant"]
margin_top = 40.0
margin_right = 170.0
margin_bottom = 56.0
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 12 )
max_value = 100.0

[node name="Plant2" type="VBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 184.0
margin_top = -63.0
margin_right = 354.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plant Health" type="Label" parent="UI/Plant2"]
margin_right = 170.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
text = "Plant Health"

[node name="Label3" type="Label" parent="UI/Plant2"]
margin_top = 19.0
margin_right = 170.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 10 )
text = "Plant Water"

[node name="Label2" type="Label" parent="UI/Plant2"]
margin_top = 38.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 10 )
text = "Plant Sunlight"

[node name="Robot" type="VBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -40.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Robot Energy" type="ProgressBar" parent="UI/Robot"]
margin_top = 14.0
margin_right = 180.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 12 )

[node name="Label3" type="Label" parent="UI/Robot/Robot Energy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_right = -185.0
custom_fonts/font = SubResource( 10 )
text = "Robot Energy"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notifications" type="VBoxContainer" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 455.0
margin_bottom = 100.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Storm" type="Label" parent="UI/Notifications"]
visible = false
margin_right = 445.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
text = "Storm Incoming in:"
align = 1
valign = 1
uppercase = true

[node name="Watering_Place" type="Label" parent="UI/Notifications"]
visible = false
margin_top = 25.0
margin_right = 445.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 10 )
text = "Press E to water the plant"
align = 1
valign = 1
uppercase = true

[node name="Water" type="Label" parent="UI/Notifications"]
visible = false
margin_top = 50.0
margin_right = 445.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 10 )
text = "Not Enough water! find water"
align = 1
valign = 1
uppercase = true

[node name="Sunlight" type="Label" parent="UI/Notifications"]
visible = false
margin_top = 75.0
margin_right = 445.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 10 )
text = "Overexposure to sun! Press \"H\" to hide The Plant"
align = 1
valign = 1
uppercase = true

[node name="Sunlight2" type="Label" parent="UI/Notifications"]
visible = false
margin_top = 100.0
margin_right = 445.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 10 )
text = "Not enough sunlight!"
align = 1
valign = 1
uppercase = true

[node name="SandStorm" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.3135, 17.6859, 74.6438 )
script = ExtResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.21071, -0.977549, 0, 0.977549, 0.21071, 0, 0, 0, 1, -4.65661e-10, 0, 0 )
light_energy = 0.05

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -36.0
autoplay = true
[connection signal="body_entered" from="Ground/Water#1" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#1" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Water#2" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#2" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Water#3" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#3" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Water#4" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#4" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Water#5" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#5" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Water#6" to="Character" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Ground/Water#6" to="Character" method="_on_Water1_body_exited"]
[connection signal="body_entered" from="Ground/Cover" to="Character" method="_on_Cover_body_entered"]
[connection signal="body_exited" from="Ground/Cover" to="Character" method="_on_Cover_body_exited"]
[connection signal="body_entered" from="Ground/Cover2" to="Character" method="_on_Cover_body_entered"]
[connection signal="body_exited" from="Ground/Cover2" to="Character" method="_on_Cover_body_exited"]
[connection signal="body_entered" from="Ground/Cover3" to="Character" method="_on_Cover_body_entered"]
[connection signal="body_exited" from="Ground/Cover3" to="Character" method="_on_Cover_body_exited"]
[connection signal="body_entered" from="Ground/Cover4" to="Character" method="_on_Cover_body_entered"]
[connection signal="body_exited" from="Ground/Cover4" to="Character" method="_on_Cover_body_exited"]
[connection signal="body_entered" from="Ground/Area" to="SandStorm" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Ground/Area2" to="." method="_on_Area2_body_entered"]
